[package]
name = "md2html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
markdown = "0.3.0"
wasm-bindgen = "0.2"
# web-sys = {version="0.3.57",features=["console"]}